_includes/css/poole.css
/*
 *                        ___
 *                       /\_ \
 *  _____     ___     ___\//\ \      __
 * /\ '__`\  / __`\  / __`\\ \ \   /'__`\
 * \ \ \_\ \/\ \_\ \/\ \_\ \\_\ \_/\  __/
 *  \ \ ,__/\ \____/\ \____//\____\ \____\
 *   \ \ \/  \/___/  \/___/ \/____/\/____/
 *    \ \_\
 *     \/_/
 *
 * Designed, built, and released under MIT license by @mdo. Learn more at
 * https://github.com/poole/poole.
 */


/*
 * Contents
 *
 * Body resets
 * Custom type
 * Messages
 * Container
 * Masthead
 * Posts and pages
 * Pagination
 * Reverse layout
 * Themes
 */


/*
 * Body resets
 *
 * Update the foundational and global aspects of the page.
 */

* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
}

html {
  font-size: 19px;
  line-height: 1.5;
}
@media (min-width: 38em) {
  html {
    font-size: 22px;
  }
}

body {
  -webkit-text-size-adjust: 100%;
      -ms-text-size-adjust: 100%;
}

/* Headings */
h1, h2, h3, h4, h5, h6 {
  margin-bottom: .5rem;
  color: #313131;
  text-rendering: optimizeLegibility;
  letter-spacing: -1px;
  line-height: 1;
}
h1 {
  font-size: 2rem;
}
h2 {
  margin-top: 2rem;
  font-size: 1.5rem;
}
h3,h4, h5, h6 {
  margin-top: 2rem;
  font-size: 1.25rem;
}
@media (max-width: 48em) {
  h1 {
    font-size: 1.5rem;
  }
}

/* Body text */
p {
  margin-top: 0;
  margin-bottom: 1rem;
}

dt {
  font-weight: bold;
}
dd {
  margin-bottom: .5rem;
}

/* Misc */
hr {
  position: relative;
  margin: 1rem 0;
  border: 1 solid #000;
}

/* Code */
code {
  display: inline;
  white-space: nowrap;
}
pre {
  display: block;
  margin: 1rem 0 1rem 0;
  line-height: 1.3;
}

/* Pygments via Jekyll */
.highlight {
  margin-bottom: 1rem;
  border-radius: 4px;
}
.highlight pre {
  margin-bottom: 0;
}

/* Quotes */
blockquote {
  padding: 0 0.5rem;
  margin: 1rem 0;
}
@media (min-width: 30em) {
  blockquote {
    padding-right: 1.25rem;
    padding-left: 1.25rem;
  }
}

img {
  display: block;
  max-width: 100%;
  margin: 0;
  border-radius: 5px;
}

/* Tables */
table {
  margin-bottom: 1rem;
  width: 100%;
  border: 1px solid #e5e5e5;
  border-collapse: collapse;
}
td,
th {
  padding: .25rem .5rem;
  border: 1px solid #e5e5e5;
}
tr.header {
  background-color: #f9f9f9;
  font-weight: bold;
}


/*
 * Custom type
 *
 * Extend paragraphs with `.lead` for larger introductory text.
 */

.lead {
  font-size: 1.25rem;
  font-weight: 300;
}


/*
 * Messages
 *
 * Show alert messages to users. You may add it to single elements like a `<p>`,
 * or to a parent if there are multiple elements to show.
 */

.message {
  margin-bottom: 1rem;
  padding: 1rem;
  background-color: #eee;
  border: #888 1px solid;
  border-radius: 4px;
}


/*
 * Container
 *
 * Center the page content.
 */

.container {
  max-width: 38rem;
  padding-left:  1rem;
  padding-right: 1rem;
  margin-left:  auto;
  margin-right: auto;
}

